Fix misalignment between knob and tickmarks in LabeledKnob

--- a/src/components/FrontPanel/Knob.module.scss
+++ b/src/components/FrontPanel/Knob.module.scss
@@ -124,7 +124,7 @@
   height: 48px;
   bottom: 0;
   left: 50%;
-  transform: translateX(-50%) scale(1.1);
+  transform: translateX(calc(-50% - 4px)) scale(1.1);
 }
 
 .labeledKnobTickmark {
